themes/maik-blog/assets/scss/_main.scss
/* Webkit Scrollbar Customize */
::-webkit-scrollbar {
    width: 8px;
    height: 8px;
    background: $scrollbar-background;
}

::-webkit-scrollbar-thumb {
    background: #888;

    &:hover {
        background: $scrollbar-color;
    }
}

html {
    box-sizing: border-box;
    line-height: 1.6;
    letter-spacing: 0.06em;
    scroll-behavior: smooth;
}

*,
*:before,
*:after {
    box-sizing: inherit;
    overflow-wrap: anywhere;
    word-break: break-word;
}

body {
    margin: 0;
    padding: 0;
    font-family: "Inter UI", -apple-system, BlinkMacSystemFont, "Roboto",
        "Segoe UI", Helvetica, Arial, sans-serif;
    font-display: auto;
    font-size: 1rem;
    line-height: 1.54;
    background-color: $light-background;
    color: $light-color;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    font-feature-settings: "liga", "tnum", "case", "calt", "zero", "ss01",
        "locl";
    -webkit-overflow-scrolling: touch;
    -webkit-text-size-adjust: 100%;

    display: flex;
    min-height: 100vh;
    flex-direction: column;

    @media #{$media-size-phone} {
        font-size: 1rem;
    }

    &.dark-theme {
        background-color: $dark-background;
        color: $dark-color;
    }
}

h2,
h3,
h4,
h5,
h6 {
    display: flex;
    align-items: center;
    line-height: 1.3;
}

h1 {
    font-size: 2.625rem;
}

h2 {
    font-size: 1.625rem;
}

h3 {
    font-size: 1.375rem;
}

h4 {
    font-size: 1.125rem;
}

@media #{$media-size-phone} {
    h1 {
        font-size: 2rem;
    }

    h2 {
        font-size: 1.4rem;
    }

    h3 {
        font-size: 1.15rem;
    }

    h4 {
        font-size: 1.125rem;
    }
}

a {
    color: inherit;
}

img {
    display: block;
    width: auto;
    height: auto;
    max-width: 100%;
    max-height: 100%;

    &.left {
        margin-right: auto;
    }

    &.center {
        margin-left: auto;
        margin-right: auto;
    }

    &.right {
        margin-left: auto;
    }

    &.circle {
        border-radius: 50%;
        max-width: 25%;
        margin: auto;
    }
}

figure {
    display: table;
    max-width: 100%;
    margin: 1em 0;

    img {
        border-radius: 8px;
        padding: 5px;

        .dark-theme & {
            background-color: $dark-image-border;
        }
    }

    picture {
        max-height: 100%;
        max-width: 100%;
    }

    &.left {
        margin-right: auto;
    }

    &.left-floated {
        margin-right: auto;
        float: left;

        img {
            margin: 20px 20px 20px 0;
        }
    }

    &.center {
        margin-left: auto;
        margin-right: auto;
    }

    &.right {
        margin-left: auto;
    }

    &.right-floated {
        margin-left: auto;
        float: right;

        img {
            margin: 20px 0 20px 20px;
        }
    }

    &.rounded {
        img {
            border-radius: 50%;
        }
    }

    figcaption {
        font-size: 1.125rem;
        line-height: 1.3;
        margin-top: 0.4em;
        opacity: 0.8;
        vertical-align: middle;

        span {
            vertical-align: middle;
        }

        &.left {
            text-align: left;
        }

        &.center {
            text-align: center;
        }

        &.right {
            text-align: right;
        }

        .figcaption {
            &__title {
                font-weight: bold;
            }

            &__attr {
                font-size: 0.7em;

                svg {
                    margin-right: 0.3em;
                }
            }
        }
    }

    &.small {
        max-width: 300px;
        width: 90%;
        margin: 5px 0;
    }

    &.inline {
        display: inline-table;
    }

    &.floated-focus {
        display: flex;
        position: fixed;
        top: 0;
        left: 0;
        width: 100vw;
        max-width: unset;
        height: 100vh;
        padding: 3rem;
        margin: 0;
        align-items: center;
        justify-content: center;
        flex-direction: column;
        background-color: transparentize(darken($dark-background, 5%), 0.08);
        z-index: 10000;

        picture {
            max-height: 90%;
        }

        figcaption {
            color: $dark-color;
            font-size: 1.5rem;
        }

        &:after {
            content: "Close";
            margin-top: 1rem;
            text-decoration: underline;
            cursor: pointer;
            display: block;
            color: transparentize($dark-color, 0.43);
        }
    }
}

code {
    font-family: Consolas, Monaco, Andale Mono, Ubuntu Mono, monospace;
    font-display: auto;
    font-feature-settings: normal;
    background: $light-background-secondary;
    padding: 1px 6px;
    margin: 0 2px;
    border-radius: 5px;
    font-size: 0.95rem;
    word-wrap: break-word;

    .dark-theme & {
        background: $dark-background-secondary;
    }
}

pre {
    // background: #212020;
    padding: 10px 10px 10px 20px;
    border-radius: 8px;
    font-size: 0.95rem;
    overflow: auto;

    @media #{$media-size-phone} {
        white-space: pre-wrap;
        word-wrap: break-word;
    }

    code {
        background: none !important;
        color: #ccc;
        margin: 0;
        padding: 0;
        font-size: inherit;

        .dark-theme & {
            color: inherit;
        }
    }
}

blockquote {
    position: relative;
    border-left: 2px solid;
    margin: 20px 40px;
    padding: 10px 20px;

    @media #{$media-size-phone} {
        margin: 10px;
        padding: 10px;
    }

    &:before {
        content: "”";
        // font-family: Georgia, serif;
        font-display: auto;
        font-size: 3.875rem;
        position: absolute;
        left: -40px;
        top: -13px;
    }

    p:first-of-type {
        margin-top: 0;
    }

    p:last-of-type {
        margin-bottom: 0;
    }
}

ul,
ol {
    margin-left: 40px;
    padding: 0;

    @media #{$media-size-phone} {
        margin-left: 20px;
    }
}

ol ol {
    list-style-type: lower-alpha;
}

.container {
    flex: 1 auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
}

.content {
    display: flex;
    flex-direction: column;
    flex: 1 auto;
    align-items: center;
    justify-content: center;
    margin: 0;

    @media #{$media-size-phone} {
        margin-top: 0;
    }

    &-list {
        display: block;
    }
}

hr {
    width: 100%;
    border: none;
    background: $light-border-color;
    height: 1px;

    .dark-theme & {
        background: $dark-border-color;
    }
}

svg {
    height: 1em;
}

.hidden {
    display: none;
}

.hide-on-phone {
    @media #{$media-size-phone} {
        display: none;
    }
}

.hide-on-tablet {
    @media #{$media-size-tablet} {
        display: none;
    }
}

// Accessibility
.screen-reader-text {
    border: 0;
    clip: rect(1px, 1px, 1px, 1px);
    clip-path: inset(50%);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute !important;
    width: 1px;
    word-wrap: normal !important;
}

.screen-reader-text:focus {
    background-color: $screen-reader-text-background;
    border-radius: 3px;
    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
    clip: auto !important;
    clip-path: none;
    color: $screen-reader-text-color;
    display: block;
    font-size: 14px;
    font-size: 0.875rem;
    font-weight: bold;
    height: auto;
    width: auto;
    top: 5px;
    left: 5px;
    line-height: normal;
    padding: 15px 23px 14px;
    text-decoration: none;
    z-index: 100000;
}

// Custom
.socials {
    user-select: none;

    svg {
        font-size: 1.5rem;
    }
}

table {
    width: 100%;
    padding: 10px 10px 10px 20px;
    border-radius: 8px;
    font-size: 0.95rem;
    overflow: auto;
    background: $light-background-secondary;

    th {
        padding: 8px 4px;

        word-break: normal;
        overflow-wrap: normal;
    }

    td {
        padding: 6px 4px;

        border-top: 1px solid $light-color-secondary;
    }

    .dark-theme & {
        background: $dark-background-secondary;

        td {
            border-top-color: $dark-color-secondary;
        }
    }
}

.feather {
    display: inline-block;
    vertical-align: -0.125em;
    width: 1em;
    height: 1em;
}

.nostyle {
    text-decoration: none;
}

.breadcrumbs {
    display: inline;

    ol {
        list-style-type: none;
        margin: 0;
        display: inline;

        li {
            display: inline;

            &::after {
                content: " > ";
            }
        }
    }
}

.article-heading {
    a {
        position: relative;
        text-decoration: none;

        --background-image: url("data:image/svg+xml, %3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%20stroke=%22currentColor%22%20stroke-width=%222%22%20stroke-linecap=%22round%22%20stroke-linejoin=%22round%22%20class=%22feather%20feather-link%22%3E%3Cpath%20d=%22M10%2013a5%205%200%200%200%207.54.54l3-3a5%205%200%200%200-7.07-7.07l-1.72%201.71%22%3E%3C/path%3E%3Cpath%20d=%22M14%2011a5%205%200%200%200-7.54-.54l-3%203a5%205%200%200%200%207.07%207.07l1.71-1.71%22%3E%3C/path%3E%3C/svg%3E");

        &.current-heading {
            --background-image: url("data:image/svg+xml, %3Csvg%20xmlns=%22http://www.w3.org/2000/svg%22%20width=%2224%22%20height=%2224%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%20stroke=%22green%22%20stroke-width=%224%22%20stroke-linecap=%22round%22%20stroke-linejoin=%22round%22%20class=%22feather%20feather-check%22%3E%3Cpolyline%20points=%2220%206%209%2017%204%2012%22%3E%3C/polyline%3E%3C/svg%3E");
        }

        &:hover {
            &::before {
                content: " ";
                display: inline-block;
                position: absolute;
                top: 50%;
                transform: translateY(-50%);
                height: 100%;

                background-image: var(--background-image);
                background-repeat: no-repeat;
                background-position: center;
                background-size: auto 50%;
            }
        }

        @media #{$media-size-tablet-min} {
            &:hover {
                &::before {
                    right: 100%;
                    width: 1.5em;
                }
            }
        }

        @media #{$media-size-tablet} {
            &:hover {
                &::before {
                    left: 100%;
                    width: 1.2em;
                }
            }
        }
    }
}

